------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------
August 6 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* blue color cursor for run mode
	* some typo corrected
	* bananapeels can be resurrected
	* monster portal in Oree level
	* X swimming here now ok

August 5 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* bomb displacing energy field in Attnam

August 5 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Food added to UT
	* wskill with no exp that are used are shown on wskill screen

July 14 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Vladimir works

July 14 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Vladimir works better, but far from perfect
	

July 13 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Makefile corrections (couple of missing files)
	* Moved Polymorph command in cpp to only wizard mode compiles..
	
July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Minor correction to fountains...
	
July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Added wizard mode command Polymorph (key '[')

July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Changed license notices a bit

July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* levitating plants and mushrooms move about
	
July 7 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Vomit messages work...

July 7 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* "You look down. You see an active mine." in the dark. no more...
	* Headless zombies can no longer vomit.
	* ?,*,|,<,>,/,\,: are no longer acceptable for names (windows doesn't like them)
	* ForcedVomit messages are different for mommos and dolphins