@@ -6,6 +6,11 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+August 17 2004 Heikki Sairanen <firstname.lastname@tut.fi>
+
+	* smith and tailor work with equiped items now too.
+	* changed tailor replies
+
 August 6 2004 Heikki Sairanen <firstname.lastname@tut.fi>
 
 	* blue color cursor for run mode
